# cmake-example

./: README.md
app/: CMakeLists.txt
app/app/src/: CMakeLists.txt
app/app/src/app1/: CMakeLists.txt  app1.cpp
app/app/src/app2/: CMakeLists.txt  app2.cpp
app/app/src/common/: CMakeLists.txt  common.cpp  common.h
app/yhr/: CMakeLists.txt
app/yhr/src/: CMakeLists.txt
app/yhr/src/include/yhr/: yhr.h
app/yhr/src/lib/: yhr.cpp
app/yhr/test1/: CMakeLists.txt  test1.cpp
